# EasyRouter

./: CMakeLists.txt  Common.cmake  README.md  Usage.md  使用说明.md
Config/: check_local_rule.py  config.json  start.sh
Hst2/: T2SyncConnection.cc  T2SyncConnection.cpp  T2SyncConnection.h  t2sdk_interface.h
Hst2/Test/: CMakeLists.txt  test.cpp
ServerData/: RtServerDataDefine.h  RtStaticData.cpp  RtStaticData.h
Source/: RouterServer.cpp  RouterServer.h  RtAuthUser.cpp  RtAuthUser.h  RtCheckLocalRule.cpp  RtCheckLocalRule.h  RtCommDataDefine.h  RtConfig.cpp  RtConfig.h  RtDstClient.cpp  RtDstClient.h  RtGlobalResource.cpp  RtGlobalResource.h  RtGwClientManager.h  RtHst2Auth.cpp  RtHst2Auth.h  RtIdleOvertime.cpp  RtIdleOvertime.h  RtTool.cpp  RtTool.h  RtUserSession.h  RtVersion.h  main.cpp
Sync/: T2SyncConnection.cc  T2SyncConnection.h
Test/: C20CoroutineTest.cpp  CMakeLists.txt  CoReadfile.cpp  CoroutineTest.cpp  MultiCoroutineTest.cpp  SimpleCoTest.cpp
